# mpi-with-c11

./: .gitignore  Makefile.am  autogen.sh  configure.ac  mpi.h  mpi_c.h  mpi_cxx.h  notes.txt  send.c  send_c.c  send_cxx.cc  test_c.c  test_cxx.cc  test_mpi_send.c  test_today.c
